# btcc-litedesk

./: .gitignore  Cargo.toml  README.md
config/: setings.json
docs/: 主要功能.md  项目结构.md
docs/db_table/: README.md  btcc_wallets.md
docs/install/: pbe-upgrade.md  release-sha256.md  vanity-gpu.md
docs/项目执行/: 11-钱包生成.md
examples/wallet/: Cargo.toml  build.rs
examples/wallet/docs/: nft_rarity_help.md
examples/wallet/src/: app.rs  main.rs  runtime_paths.rs  theme.rs
examples/wallet/src/ui/: dashboard.rs  mod.rs  palette.rs  title_bar.rs
examples/wallet/src/ui/btcc/: batch_send.rs  donate_window.rs  mod.rs  receive_window.rs  stamp_mint.rs  vanity_generator.rs  wallet_generator.rs  wallet_manager.rs
examples/wallet/src/ui/btcc/wallet_list/: mod.rs  render.rs  widgets.rs
examples/wallet/src/ui/nft/: mod.rs  render.rs  view.rs
scripts/: build_macos_app.sh
src/: lib.rs
src/db/: btcc_wallet.rs  mod.rs
src/wallet/: explorer.rs  keys.rs  mint.rs  mod.rs  pbe.rs  tx.rs  vanity_gpu.rs
src/wallet/vanity_gpu/: macos_disabled.rs  macos_metal.rs  mod.rs  non_macos.rs
src/wallet/vanity_gpu/shaders/: batch_normalize_btcc_match.metal  compute_jacobian.metal  vanity_probe.metal
src/wallet/vanity_gpu/wgsl/: field_jacobian.wgsl  search_btcc.wgsl
