[package]
name = "btcc_litedesk"
version = "0.1.3"
edition = "2024"

[workspace]
members = ["examples/wallet"]
default-members = ["."]
resolver = "3"

[profile.dev]
debug = 0
incremental = false

[dependencies]
aes = "0.8"
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
bech32 = "0.11"
bip39 = "2"
bitcoin = "0.32"
cbc = "0.1"
cipher = "0.4"
pbkdf2 = "0.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots", "system-proxy"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1.42", features = ["rt", "sync"] }
vgen = { git = "https://github.com/nxobit/vgen.git", rev = "d8f6aa7c66be6b222aa62eae862be58130b00316" }

[patch.crates-io]
naga = { git = "https://github.com/nxobit/naga.git", rev = "461a550e063d1e063cc361f388e0e3e32fe39451" }
