[package]
name = "wallet"
version = "0.1.3"
edition = "2024"

[package.metadata.packager]
product-name = "BTCC Litedesk"
identifier = "com.btcc-litedesk.desktop"
icons = ["assets/app.ico"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bip39 = "2"
btcc_litedesk = { path = "../.." }
gpui = { version = "0.2.2", default-features = false, features = ["runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", tag = "v0.5.1" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", tag = "v0.5.1" }
image = "0.25"
qrcode = "0.14"
rand = { version = "0.8", features = ["std_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[build-dependencies]
winresource = "0.1"
